parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    NOT
    OR

Grammar

Rule 0     S' -> game_spec
Rule 1     game_spec -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement_list statement
Rule 4     statement -> room_def
Rule 5     statement -> connect_def
Rule 6     statement -> item_def
Rule 7     statement -> command_def
Rule 8     room_def -> ROOM ID STRING
Rule 9     connect_def -> CONNECT ID DIRECTION ID
Rule 10    item_def -> ITEM ID STRING IN ID
Rule 11    command_def -> COMMAND ID ID COLON WHEN condition DO action_list
Rule 12    condition -> ID IN ITEMS
Rule 13    condition -> ROOM IS STRING
Rule 14    action_list -> action
Rule 15    action_list -> action_list AND action
Rule 16    action -> PRINT STRING
Rule 17    action -> GET ID
Rule 18    action -> RELEASE ID

Terminals, with rules where they appear

AND                  : 15
COLON                : 11
COMMAND              : 11
CONNECT              : 9
DIRECTION            : 9
DO                   : 11
GET                  : 17
ID                   : 8 9 9 10 10 11 11 12 17 18
IN                   : 10 12
IS                   : 13
ITEM                 : 10
ITEMS                : 12
NOT                  : 
OR                   : 
PRINT                : 16
RELEASE              : 18
ROOM                 : 8 13
STRING               : 8 10 13 16
WHEN                 : 11
error                : 

Nonterminals, with rules where they appear

action               : 14 15
action_list          : 11 15
command_def          : 7
condition            : 11
connect_def          : 5
game_spec            : 0
item_def             : 6
room_def             : 4
statement            : 2 3
statement_list       : 1 3

Parsing method: LALR

state 0

    (0) S' -> . game_spec
    (1) game_spec -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (4) statement -> . room_def
    (5) statement -> . connect_def
    (6) statement -> . item_def
    (7) statement -> . command_def
    (8) room_def -> . ROOM ID STRING
    (9) connect_def -> . CONNECT ID DIRECTION ID
    (10) item_def -> . ITEM ID STRING IN ID
    (11) command_def -> . COMMAND ID ID COLON WHEN condition DO action_list

    ROOM            shift and go to state 8
    CONNECT         shift and go to state 9
    ITEM            shift and go to state 10
    COMMAND         shift and go to state 11

    game_spec                      shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    room_def                       shift and go to state 4
    connect_def                    shift and go to state 5
    item_def                       shift and go to state 6
    command_def                    shift and go to state 7

state 1

    (0) S' -> game_spec .



state 2

    (1) game_spec -> statement_list .
    (3) statement_list -> statement_list . statement
    (4) statement -> . room_def
    (5) statement -> . connect_def
    (6) statement -> . item_def
    (7) statement -> . command_def
    (8) room_def -> . ROOM ID STRING
    (9) connect_def -> . CONNECT ID DIRECTION ID
    (10) item_def -> . ITEM ID STRING IN ID
    (11) command_def -> . COMMAND ID ID COLON WHEN condition DO action_list

    $end            reduce using rule 1 (game_spec -> statement_list .)
    ROOM            shift and go to state 8
    CONNECT         shift and go to state 9
    ITEM            shift and go to state 10
    COMMAND         shift and go to state 11

    statement                      shift and go to state 12
    room_def                       shift and go to state 4
    connect_def                    shift and go to state 5
    item_def                       shift and go to state 6
    command_def                    shift and go to state 7

state 3

    (2) statement_list -> statement .

    ROOM            reduce using rule 2 (statement_list -> statement .)
    CONNECT         reduce using rule 2 (statement_list -> statement .)
    ITEM            reduce using rule 2 (statement_list -> statement .)
    COMMAND         reduce using rule 2 (statement_list -> statement .)
    $end            reduce using rule 2 (statement_list -> statement .)


state 4

    (4) statement -> room_def .

    ROOM            reduce using rule 4 (statement -> room_def .)
    CONNECT         reduce using rule 4 (statement -> room_def .)
    ITEM            reduce using rule 4 (statement -> room_def .)
    COMMAND         reduce using rule 4 (statement -> room_def .)
    $end            reduce using rule 4 (statement -> room_def .)


state 5

    (5) statement -> connect_def .

    ROOM            reduce using rule 5 (statement -> connect_def .)
    CONNECT         reduce using rule 5 (statement -> connect_def .)
    ITEM            reduce using rule 5 (statement -> connect_def .)
    COMMAND         reduce using rule 5 (statement -> connect_def .)
    $end            reduce using rule 5 (statement -> connect_def .)


state 6

    (6) statement -> item_def .

    ROOM            reduce using rule 6 (statement -> item_def .)
    CONNECT         reduce using rule 6 (statement -> item_def .)
    ITEM            reduce using rule 6 (statement -> item_def .)
    COMMAND         reduce using rule 6 (statement -> item_def .)
    $end            reduce using rule 6 (statement -> item_def .)


state 7

    (7) statement -> command_def .

    ROOM            reduce using rule 7 (statement -> command_def .)
    CONNECT         reduce using rule 7 (statement -> command_def .)
    ITEM            reduce using rule 7 (statement -> command_def .)
    COMMAND         reduce using rule 7 (statement -> command_def .)
    $end            reduce using rule 7 (statement -> command_def .)


state 8

    (8) room_def -> ROOM . ID STRING

    ID              shift and go to state 13


state 9

    (9) connect_def -> CONNECT . ID DIRECTION ID

    ID              shift and go to state 14


state 10

    (10) item_def -> ITEM . ID STRING IN ID

    ID              shift and go to state 15


state 11

    (11) command_def -> COMMAND . ID ID COLON WHEN condition DO action_list

    ID              shift and go to state 16


state 12

    (3) statement_list -> statement_list statement .

    ROOM            reduce using rule 3 (statement_list -> statement_list statement .)
    CONNECT         reduce using rule 3 (statement_list -> statement_list statement .)
    ITEM            reduce using rule 3 (statement_list -> statement_list statement .)
    COMMAND         reduce using rule 3 (statement_list -> statement_list statement .)
    $end            reduce using rule 3 (statement_list -> statement_list statement .)


state 13

    (8) room_def -> ROOM ID . STRING

    STRING          shift and go to state 17


state 14

    (9) connect_def -> CONNECT ID . DIRECTION ID

    DIRECTION       shift and go to state 18


state 15

    (10) item_def -> ITEM ID . STRING IN ID

    STRING          shift and go to state 19


state 16

    (11) command_def -> COMMAND ID . ID COLON WHEN condition DO action_list

    ID              shift and go to state 20


state 17

    (8) room_def -> ROOM ID STRING .

    ROOM            reduce using rule 8 (room_def -> ROOM ID STRING .)
    CONNECT         reduce using rule 8 (room_def -> ROOM ID STRING .)
    ITEM            reduce using rule 8 (room_def -> ROOM ID STRING .)
    COMMAND         reduce using rule 8 (room_def -> ROOM ID STRING .)
    $end            reduce using rule 8 (room_def -> ROOM ID STRING .)


state 18

    (9) connect_def -> CONNECT ID DIRECTION . ID

    ID              shift and go to state 21


state 19

    (10) item_def -> ITEM ID STRING . IN ID

    IN              shift and go to state 22


state 20

    (11) command_def -> COMMAND ID ID . COLON WHEN condition DO action_list

    COLON           shift and go to state 23


state 21

    (9) connect_def -> CONNECT ID DIRECTION ID .

    ROOM            reduce using rule 9 (connect_def -> CONNECT ID DIRECTION ID .)
    CONNECT         reduce using rule 9 (connect_def -> CONNECT ID DIRECTION ID .)
    ITEM            reduce using rule 9 (connect_def -> CONNECT ID DIRECTION ID .)
    COMMAND         reduce using rule 9 (connect_def -> CONNECT ID DIRECTION ID .)
    $end            reduce using rule 9 (connect_def -> CONNECT ID DIRECTION ID .)


state 22

    (10) item_def -> ITEM ID STRING IN . ID

    ID              shift and go to state 24


state 23

    (11) command_def -> COMMAND ID ID COLON . WHEN condition DO action_list

    WHEN            shift and go to state 25


state 24

    (10) item_def -> ITEM ID STRING IN ID .

    ROOM            reduce using rule 10 (item_def -> ITEM ID STRING IN ID .)
    CONNECT         reduce using rule 10 (item_def -> ITEM ID STRING IN ID .)
    ITEM            reduce using rule 10 (item_def -> ITEM ID STRING IN ID .)
    COMMAND         reduce using rule 10 (item_def -> ITEM ID STRING IN ID .)
    $end            reduce using rule 10 (item_def -> ITEM ID STRING IN ID .)


state 25

    (11) command_def -> COMMAND ID ID COLON WHEN . condition DO action_list
    (12) condition -> . ID IN ITEMS
    (13) condition -> . ROOM IS STRING

    ID              shift and go to state 26
    ROOM            shift and go to state 28

    condition                      shift and go to state 27

state 26

    (12) condition -> ID . IN ITEMS

    IN              shift and go to state 29


state 27

    (11) command_def -> COMMAND ID ID COLON WHEN condition . DO action_list

    DO              shift and go to state 30


state 28

    (13) condition -> ROOM . IS STRING

    IS              shift and go to state 31


state 29

    (12) condition -> ID IN . ITEMS

    ITEMS           shift and go to state 32


state 30

    (11) command_def -> COMMAND ID ID COLON WHEN condition DO . action_list
    (14) action_list -> . action
    (15) action_list -> . action_list AND action
    (16) action -> . PRINT STRING
    (17) action -> . GET ID
    (18) action -> . RELEASE ID

    PRINT           shift and go to state 35
    GET             shift and go to state 36
    RELEASE         shift and go to state 37

    action_list                    shift and go to state 33
    action                         shift and go to state 34

state 31

    (13) condition -> ROOM IS . STRING

    STRING          shift and go to state 38


state 32

    (12) condition -> ID IN ITEMS .

    DO              reduce using rule 12 (condition -> ID IN ITEMS .)


state 33

    (11) command_def -> COMMAND ID ID COLON WHEN condition DO action_list .
    (15) action_list -> action_list . AND action

    ROOM            reduce using rule 11 (command_def -> COMMAND ID ID COLON WHEN condition DO action_list .)
    CONNECT         reduce using rule 11 (command_def -> COMMAND ID ID COLON WHEN condition DO action_list .)
    ITEM            reduce using rule 11 (command_def -> COMMAND ID ID COLON WHEN condition DO action_list .)
    COMMAND         reduce using rule 11 (command_def -> COMMAND ID ID COLON WHEN condition DO action_list .)
    $end            reduce using rule 11 (command_def -> COMMAND ID ID COLON WHEN condition DO action_list .)
    AND             shift and go to state 39


state 34

    (14) action_list -> action .

    AND             reduce using rule 14 (action_list -> action .)
    ROOM            reduce using rule 14 (action_list -> action .)
    CONNECT         reduce using rule 14 (action_list -> action .)
    ITEM            reduce using rule 14 (action_list -> action .)
    COMMAND         reduce using rule 14 (action_list -> action .)
    $end            reduce using rule 14 (action_list -> action .)


state 35

    (16) action -> PRINT . STRING

    STRING          shift and go to state 40


state 36

    (17) action -> GET . ID

    ID              shift and go to state 41


state 37

    (18) action -> RELEASE . ID

    ID              shift and go to state 42


state 38

    (13) condition -> ROOM IS STRING .

    DO              reduce using rule 13 (condition -> ROOM IS STRING .)


state 39

    (15) action_list -> action_list AND . action
    (16) action -> . PRINT STRING
    (17) action -> . GET ID
    (18) action -> . RELEASE ID

    PRINT           shift and go to state 35
    GET             shift and go to state 36
    RELEASE         shift and go to state 37

    action                         shift and go to state 43

state 40

    (16) action -> PRINT STRING .

    AND             reduce using rule 16 (action -> PRINT STRING .)
    ROOM            reduce using rule 16 (action -> PRINT STRING .)
    CONNECT         reduce using rule 16 (action -> PRINT STRING .)
    ITEM            reduce using rule 16 (action -> PRINT STRING .)
    COMMAND         reduce using rule 16 (action -> PRINT STRING .)
    $end            reduce using rule 16 (action -> PRINT STRING .)


state 41

    (17) action -> GET ID .

    AND             reduce using rule 17 (action -> GET ID .)
    ROOM            reduce using rule 17 (action -> GET ID .)
    CONNECT         reduce using rule 17 (action -> GET ID .)
    ITEM            reduce using rule 17 (action -> GET ID .)
    COMMAND         reduce using rule 17 (action -> GET ID .)
    $end            reduce using rule 17 (action -> GET ID .)


state 42

    (18) action -> RELEASE ID .

    AND             reduce using rule 18 (action -> RELEASE ID .)
    ROOM            reduce using rule 18 (action -> RELEASE ID .)
    CONNECT         reduce using rule 18 (action -> RELEASE ID .)
    ITEM            reduce using rule 18 (action -> RELEASE ID .)
    COMMAND         reduce using rule 18 (action -> RELEASE ID .)
    $end            reduce using rule 18 (action -> RELEASE ID .)


state 43

    (15) action_list -> action_list AND action .

    AND             reduce using rule 15 (action_list -> action_list AND action .)
    ROOM            reduce using rule 15 (action_list -> action_list AND action .)
    CONNECT         reduce using rule 15 (action_list -> action_list AND action .)
    ITEM            reduce using rule 15 (action_list -> action_list AND action .)
    COMMAND         reduce using rule 15 (action_list -> action_list AND action .)
    $end            reduce using rule 15 (action_list -> action_list AND action .)

